test-yaml/istio/old/order-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v2
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: order
        version: v2
    spec:
      containers:
      - name: order
        image: docker.io/wohshon/order:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
