test-yaml/istio/old/__store-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: store-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store
spec:
  hosts:
  - "*"
  gateways:
  - store-gateway
  http:
  - match:
    - uri:
        exact: /submit
    route:
    - destination:
        host: order-service
        port:
          number: 8080
